made adjustment to fix last box to align boxes correctly.

--- a/CSS/flexbox-fundamentals-exercise.css
+++ b/CSS/flexbox-fundamentals-exercise.css
@@ -54,16 +54,13 @@ section:nth-of-type(1) {
 }
 section:nth-of-type(1) div:last-child {
     /* enter needed declarations here */
-    align-self: flex-start;height: 1em;
+    align-self: flex-start;
 }
 
 .purple-box {
     background: fuchsia;
     width: 3em;
     height: 1em;
-    flex-wrap: nowrap;
-
-
 }
 
 .purple-box:nth-of-type(1) {
@@ -125,7 +122,7 @@ section:nth-of-type(6) {
     height: 14em;
     /* enter needed declarations here */
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .grey-box {
